Fixed layout issues

--- a/fightcode/static/scss/reset.scss
+++ b/fightcode/static/scss/reset.scss
@@ -1,1 +1,5 @@
 @import "compass/reset";
+
+a {
+    text-decoration: none;
+}
